--- a/ _config.yml
+++ b/ _config.yml
@@ -6,5 +6,9 @@ url: "https://daniela-v.github.io"
 markdown: kramdown
 permalink: /posts/:title/
 
+plugins:
+  - jekyll-paginate
+  
 paginate: 5
 paginate_path: "/page:num/"
+
